[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmapf"
version = "0.1.0"
description = "Partially observable Markov decision process implementation as Nudging-Based Multi-Agent Pathfinding problem environment"
readme="README.md"
dependencies = [
    "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
